First draft of site

--- a/site/views/index.hbs
+++ b/site/views/index.hbs
@@ -9,30 +9,57 @@
     <!-- views/index.hbs -->
     
     <div class="home-body">
-        <h1>Welcome to my website portfolio!</h1>
-        
-        <h2>About myself</h2>
+        <h2>About Me</h2>
         <p>
-            Enter text here about myself later
+            I hold a <strong>Bachelor of Science in Marine Science</strong> from Texas A&M University, 
+            with a focus in physical oceanography. For my undergraduate research project, I studied 
+            turbulence in water columns, utilizing data collected from sensors I helped deploy in the 
+            ocean in an effort to define turbulence. This research involved using MATLAB for data 
+            analysis and oceanographic modeling. I also published and presented my findings, which 
+            helped me refine my ability to communicate complex scientific concepts to both academic 
+            and general audiences. 
+            <br><br>
+            I went on to get a <strong>Master of Science in Medical Science</strong> with a focus in 
+            biochemistry and research, opening the door to a job in a quality control lab for Marathon 
+            Petroleum. While there were great opportunities to grow and learn at this company, they were 
+            simply not aligned with my goals. I decided to reassess my career options, and I thought back 
+            to my days as an undergraduate, sitting behind a computer for hours at a time, and thoroughly 
+            enjoying solving problems from my keyboard. Therefore, I decided to pursue a <strong>Bachelor 
+            of Science in Computer Science</strong>, in order to marry my passion for computer science 
+            with the skills I had already earned in science.
+            <br><br>
+            In my previous roles, I developed a strong proficiency in <strong>Python</strong>, <strong>
+            MATLAB</strong>, and <strong>SQL</strong>, as well as working from <strong>BASH terminals
+            </strong>. Lately, I have been working on developing my skills as a <strong>full stack 
+            web developer</strong>, hence my showcasing it here on this website, which displays projects 
+            I have developed, both alone and as a team.
+            <br><br>
+            My goal is to work with a team that mirrors my goals, where I can utilize my strengths that 
+            I have so heavily invested in, and still grow as a person and a professional.
         </p>
 
-        <h2>Navigate to my projects</h2>
+        <h2>Projects</h2>
         <p>
             <ul>
                 <li>
-                    An eCommerce website I built for a small business
-                    <a href=":{{ldblm_port}}">eCommerce Website</a>
+                    An eCommerce website I built for a small business.
                 </li>
                 <li>
-                    A hiking app that I built with a classmate that <a href=":{{byte_hikers_port}}">Hiking Application</a></li>
-                <li><a href=":{{ocean_port}}">Physical Oceanography Research Project</a></li>
+                    A hiking app that I built with a classmate that tracks outdoor activities for users.
+                </li>
+                <li>
+                    Oceanographic research project that attempts to describe turbulence intensity using a novel approach.
+                </li>
+                <button><a href="/projects">Go to projects page</a></button>
             </ul>
         </p>
 
-        <h2>Testimonials</h2>
+        <h2>Resume</h2>
         <p>
-            Testimonials go here
+            <button><a href="/resume">Click here</a></button> to view my resume.
         </p>
     
     </div>
+
+    <script src="/js/show-project.js"></script>
     
