--- a/site/views/layouts/main.hbs
+++ b/site/views/layouts/main.hbs
@@ -18,14 +18,14 @@
     <header>
         <img src="/favicon_io/android-chrome-192x192.png" 
             alt=""/>
-        <h1>Burkely Pettijohn - Software Engineer</h1>
+        <h1>Burkely Pettijohn - Portfolio</h1>
     </header>
 
     <nav id="mainNav">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/projects">Products</a></li>
-            <li><a href="/resume">Subscribe</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/resume">Resume</a></li>
         </ul>
     </nav>
     
