--- a/site/views/projects.hbs
+++ b/site/views/projects.hbs
@@ -3,15 +3,15 @@
     <ul>
         <li>
             An eCommerce website I built for a small business.
-            <button onclick="show_project('{{source}}', '{{ldblm_port}}', 'ldblm')">Little Dreamer Big Leader Mobiles</button>
+            <button onclick="show_project('{{ldblm_port}}', 'ldblm')">Little Dreamer Big Leader Mobiles</button>
         </li>
         <li>
             A hiking app that I built with a classmate that tracks outdoor activities for users.
-            <button onclick="show_project('{{source}}', '{{byte_hikers_port}}', 'byte_hikers')">Byte Hikers</button>
+            <button onclick="show_project('{{byte_hikers_port}}', 'byte_hikers')">Byte Hikers</button>
         </li>
         <li>
             Oceanographic research project that attempts to describe turbulence intensity with a novel approach.
-            <button onclick="show_project('{{source}}', '{{ocean_port}}', 'ocean')">Undergraduate Research Project</button>
+            <button onclick="show_project('{{ocean_port}}', 'ocean')">Undergraduate Research Project</button>
         </li>
     </ul>
 </div>
