Update aesthetics, update 'About Me'

--- a/site/views/index.hbs
+++ b/site/views/index.hbs
@@ -22,12 +22,21 @@
             <br><br>
             In my previous roles, I developed a strong proficiency in <strong>Python</strong>, <strong>
             MATLAB</strong>, and <strong>SQL</strong>, as well as working from <strong>BASH terminals
-            </strong>. Lately, I have been working on developing my skills as a <strong>full stack 
-            web developer</strong>, hence my showcasing it here on this website, which displays projects 
-            I have developed, both alone and as a team.
+            </strong>, <strong>Jupyter Notebook</strong>, and <strong>Git/GitHub</strong>. Lately, I have 
+            been working on developing my skills as a <strong>full stack web developer</strong>, which 
+            can be witnessed here on this website, which displays projects I have developed, both alone 
+            and as a team.
             <br><br>
-            My goal is to work with a team that mirrors my goals, where I can utilize my strengths and 
-            still grow, as I am passionate about learning and self-growth.
+            My goal is to work with a team that shares my values, allowing me to bring passion to my 
+            career. I aim to contribute in a role where I can leverage my strengths, as I have dedicated 
+            significant time and effort to developing my education and skills. I am excited about 
+            opportunities where I can continue to expand my knowledge and evolve professionally, as I am 
+            deeply committed to continuous learning and personal growth.
+        </p>
+
+        <h2>Resume</h2>
+        <p>
+            --- <button onclick="navToResume()">Click here to view my resume</button> ---
         </p>
 
         <h2>Projects</h2>
@@ -53,11 +62,11 @@
                 </a>
                 <figcaption>Oceanographic research project that attempts to describe turbulence intensity using a novel approach</figcaption>
             </figure>
-        </div>
-
-        <h2>Resume</h2>
-        <p>
-            <button><a href="/resume">Click here</a></button> to view my resume.
-        </p>
-    
+        </div>    
     </div>
+
+<script>
+    function navToResume() {
+        document.location.href = "/resume";
+    };
+</script>
