--- a/site/views/projects.hbs
+++ b/site/views/projects.hbs
@@ -1,17 +1,17 @@
 <h2>Projects</h2>
 <div id="project_list">
     <ul>
-        <li>
-            An eCommerce website I built for a small business.
+        <li id="ldblm">
             <button onclick="show_project('{{ldblm_port}}', 'ldblm')">Little Dreamer Big Leader Mobiles</button>
+            An eCommerce website I built for a small business.
         </li>
-        <li>
-            A hiking app that I built with a classmate that tracks outdoor activities for users.
+        <li id="byte_hikers">
             <button onclick="show_project('{{byte_hikers_port}}', 'byte_hikers')">Byte Hikers</button>
+            A hiking app that I built with a classmate that tracks outdoor activities for users.
         </li>
-        <li>
-            Oceanographic research project that attempts to describe turbulence intensity with a novel approach.
+        <li id="ocean">
             <button onclick="show_project('{{ocean_port}}', 'ocean')">Undergraduate Research Project</button>
+            Oceanographic research project that attempts to describe turbulence intensity with a novel approach.
         </li>
     </ul>
 </div>
