--- a/site/views/index.hbs
+++ b/site/views/index.hbs
@@ -3,35 +3,42 @@
     <div class="home-body">
         <h2>About Me</h2>
         <p>
-            I hold a <strong>Bachelor of Science in Marine Science</strong> from Texas A&M University, 
-            with a focus in physical oceanography. For my undergraduate research project, I studied 
-            turbulence in water columns, utilizing data collected from sensors I helped deploy in the 
-            ocean in an effort to define turbulence. This research involved using MATLAB for data 
-            analysis and oceanographic modeling. I also published and presented my findings, which 
-            helped me refine my ability to communicate complex scientific concepts to both academic 
-            and general audiences. 
+            I earned a <strong>Bachelor of Science in Marine Science</strong> from Texas A&M, with a
+            focus in physical oceanography. I completed an undergraduate thesis on turbulence in water
+            columns, which involved collecting and analyzing data from sensors in a coastal ecosystem in
+            an effort to help define turbulence. This research involved using MATLAB for data analysis
+            and oceanographic modeling. I also published and presented my findings, which helped me
+            refine my ability to communicate complex scientific concepts to both academic and general
+            audiences. 
             <br><br>
-            I went on to get a <strong>Master of Science in Medical Science</strong> with a focus in 
-            biochemistry and research, opening the door to a job in a quality control lab for Marathon 
-            Petroleum. While there were great opportunities to grow and learn at this company, they were 
-            simply not aligned with my goals. I decided to reassess my career options, and I thought back 
-            to my days as an undergraduate, sitting behind a computer for hours at a time, and thoroughly 
-            enjoying solving problems from my keyboard. Therefore, I decided to pursue a <strong>Bachelor 
-            of Science in Computer Science</strong>, in order to marry my passion for computer science 
-            with the skills I had already earned in science.
-            <br><br>
-            In my previous roles, I developed a strong proficiency in <strong>Python</strong>, <strong>
-            MATLAB</strong>, and <strong>SQL</strong>, as well as working from <strong>BASH terminals
-            </strong>, <strong>Jupyter Notebook</strong>, and <strong>Git/GitHub</strong>. Lately, I have 
-            been working on developing my skills as a <strong>full stack web developer</strong>, which 
-            can be witnessed here on this website, which displays projects I have developed, both alone 
-            and as a team.
+            My passion for research led me to go on to get a <strong>Master of Science in Medical
+            Science</strong> with a focus in biochemistry, opening the door to a job in a quality control
+            lab for Marathon Petroleum. After reaching a plateau of self-growth with this company, I
+            decided to reassess my career options, and I thought back to my days as an undergraduate,
+            sitting behind a computer for hours at a time, and thoroughly enjoying solving problems from
+            my keyboard. Therefore, I decided to pursue a <strong>Bachelor of Science in Computer
+            Science</strong>, in order to marry my passion for computer science with the skills I had
+            already earned in science.
             <br><br>
             My goal is to work with a team that shares my values, allowing me to bring passion to my 
             career. I aim to contribute in a role where I can leverage my strengths, as I have dedicated 
             significant time and effort to developing my education and skills. I am excited about 
             opportunities where I can continue to expand my knowledge and evolve professionally, as I am 
             deeply committed to continuous learning and personal growth.
+            <br><br>
+            In my previous roles, I developed a strong proficiency in Python, MATLAB, SQL, C/C++, and
+            full stack web development using:
+            <ul>
+                <li>Python</li>
+                <li>MATLAB</li>
+                <li>SQL</li>
+                <li>C/C++</li>
+                <li>full stack web development using:</li>
+                <ol>
+                    <li>Node JS, Express, MySQL, and Handlebars/JS/CSS</li>
+                    <li>Python Flask, Google Cloud Datastore, and Oauth2.0</li>
+                </ol>
+            </ul>
         </p>
 
         <h2>Resume</h2>
@@ -43,21 +50,21 @@
         
         <div id="index-projects">
             <figure>
-                <a href="/projects?port={{ldblm_port}}&project=ldblm">
+                <a href="/projects?project=ldblm">
                     <img src="/img/ldblm_screenshot.png" alt="Screenshot of ldblm website">
                 </a>
-                <figcaption>An eCommerce website small business</figcaption>
+                <figcaption>An eCommerce website for a small business</figcaption>
             </figure>
 
             <figure>
-                <a href="/projects?port={{byte_hikers_port}}&project=byte_hikers">
+                <a href="/projects?project=byte_hikers">
                     <img src="/img/byte_hikers_screenshot.png" alt="Screenshot of Byte Hikers application">
                 </a>
-                <figcaption>A hiking app that was built with a classmate that tracks outdoor activities for users</figcaption>
+                <figcaption>A hiking app that was built with a classmate that tracks users' outdoor activities</figcaption>
             </figure>
 
             <figure>
-                <a href="/projects?port={{ocean_port}}&project=ocean">
+                <a href="/projects?project=ocean">
                     <img src="/img/oceanography_poster.jpg" alt="Burkely Pettijohn in front of his scientific poster">
                 </a>
                 <figcaption>Oceanographic research project that attempts to describe turbulence intensity using a novel approach</figcaption>
