--- a/site/views/projects.hbs
+++ b/site/views/projects.hbs
@@ -2,22 +2,22 @@
 <div id="project_list">
     <ul>
         <li id="ldblm">
-            <button onclick="show_project('{{ldblm_port}}', 'ldblm')">Little Dreamer Big Leader Mobiles</button>
+            <button onclick="show_project('ldblm')">Little Dreamer Big Leader Mobiles</button>
             An eCommerce website I built for a small business.
         </li>
         <li id="byte_hikers">
-            <button onclick="show_project('{{byte_hikers_port}}', 'byte_hikers')">Byte Hikers</button>
+            <button onclick="show_project('byte_hikers')">Byte Hikers</button>
             A hiking app that I built with a classmate that tracks outdoor activities for users.
         </li>
         <li id="ocean">
-            <button onclick="show_project('{{ocean_port}}', 'ocean')">Undergraduate Research Project</button>
+            <button onclick="show_project('ocean')">Undergraduate Research Project</button>
             Oceanographic research project that attempts to describe turbulence intensity with a novel approach.
         </li>
     </ul>
 </div>
 
-<div>
-    <p id="about-project"></p>
+<p id="about-project"></p>
+<div class="iframes">
     <iframe id="project" frameBorder="0"></iframe>
 </div>
 
