--- a/site/views/resume.hbs
+++ b/site/views/resume.hbs
@@ -1,1 +1,3 @@
-<iframe src="/pdf/resume.pdf" width="825px" height="1110px">
+<div class="iframes">
+    <iframe src="/pdf/resume.pdf" width="825px" height="1110px">
+</div>
