--- a/site/views/index.hbs
+++ b/site/views/index.hbs
@@ -1,79 +1,77 @@
 <!-- views/index.hbs -->
-    
-    <div class="home-body">
-        <h2>About Me</h2>
-        <p>
-            I earned a <strong>Bachelor of Science in Marine Science</strong> from Texas A&M, with a
-            focus in physical oceanography. I completed an undergraduate thesis on turbulence in water
-            columns, which involved collecting and analyzing data from sensors in a coastal ecosystem in
-            an effort to help define turbulence. This research involved using MATLAB for data analysis
-            and oceanographic modeling. I also published and presented my findings, which helped me
-            refine my ability to communicate complex scientific concepts to both academic and general
-            audiences. 
-            <br><br>
-            My passion for research led me to go on to get a <strong>Master of Science in Medical
-            Science</strong> with a focus in biochemistry, opening the door to a job in a quality control
-            lab for Marathon Petroleum. After reaching a plateau of self-growth with this company, I
-            decided to reassess my career options, and I thought back to my days as an undergraduate,
-            sitting behind a computer for hours at a time, and thoroughly enjoying solving problems from
-            my keyboard. Therefore, I decided to pursue a <strong>Bachelor of Science in Computer
-            Science</strong>, in order to marry my passion for computer science with the skills I had
-            already earned in science.
-            <br><br>
-            My goal is to work with a team that shares my values, allowing me to bring passion to my 
-            career. I aim to contribute in a role where I can leverage my strengths, as I have dedicated 
-            significant time and effort to developing my education and skills. I am excited about 
-            opportunities where I can continue to expand my knowledge and evolve professionally, as I am 
-            deeply committed to continuous learning and personal growth.
-            <br><br>
-            In my previous roles, I developed a strong proficiency in Python, MATLAB, SQL, C/C++, and
-            full stack web development using:
-            <ul>
-                <li>Python</li>
-                <li>MATLAB</li>
-                <li>SQL</li>
-                <li>C/C++</li>
-                <li>full stack web development using:</li>
-                <ol>
-                    <li>Node JS, Express, MySQL, and Handlebars/JS/CSS</li>
-                    <li>Python Flask, Google Cloud Datastore, and Oauth2.0</li>
-                </ol>
-            </ul>
-        </p>
 
-        <h2>Resume</h2>
-        <p>
-            --- <button onclick="navToResume()">Click here to view my resume</button> ---
-        </p>
+<div id="about-me" class="observed-section">
+    <h3>About Me</h3>
+    <p>
+        I earned a <strong>Bachelor of Science in Marine Science</strong> from Texas A&M, with a
+        focus in physical oceanography. I completed an undergraduate thesis on turbulence in water
+        columns, which involved collecting and analyzing data from sensors in a coastal ecosystem in
+        an effort to help define turbulence. This research involved using MATLAB for data analysis
+        and oceanographic modeling. I also published and presented my findings, which helped me
+        refine my ability to communicate complex scientific concepts to both academic and general
+        audiences. 
+        <br><br>
+        My passion for research led me to pursue a <strong>Master of Science in Medical
+        Science</strong> with a focus in biochemistry, opening the door to a job in a quality control
+        lab for Marathon Petroleum. After reaching a plateau of self-growth with this company, I
+        decided to reassess my career options, and I thought back to my days as an undergraduate,
+        sitting behind a computer for hours at a time, and thoroughly enjoying solving problems from
+        my keyboard. Therefore, I decided to pursue a <strong>Bachelor of Science in Computer
+        Science</strong>, in order to marry my passion for computer science with the skills I had
+        already earned in science.
+        <br><br>
+        Because, I have dedicated significant time and effort to developing my education and skills,
+        I am excited about opportunities where I can leverage my strengths, while continuing to
+        expand my knowledge and evolve professionally. My goal is to work with a team that shares my
+        values, allowing me to bring passion to my career.
+        <br><br>
+    </p>
+</div>
 
-        <h2>Projects</h2>
-        
-        <div id="index-projects">
-            <figure>
-                <a href="/projects?project=ldblm">
-                    <img src="/img/ldblm_screenshot.png" alt="Screenshot of ldblm website">
-                </a>
-                <figcaption>An eCommerce website for a small business</figcaption>
-            </figure>
+<div id="projects" class="observed-section">
+    <h3>Projects</h3>
+    <table id="project_list">
+        <tbody>
+            {{#each projects}}
+            <tr>
+                <td class="project_image">
+                    <a href="{{this.site}}" target='_blank' rel='noopener noreferrer'>
+                        <img src="{{this.img_path}}">
+                    </a>
+                </td>
+                <td>
+                    <div class="project_description">
+                        <h4>{{this.title}} - {{this.year}}</h4>
+                        <p>{{this.description}}</p>
+                        <ul>
+                            {{#each this.software}}
+                            <li><img src={{this.src}} alt={{this.alt}} height="35px"></li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
 
-            <figure>
-                <a href="/projects?project=byte_hikers">
-                    <img src="/img/byte_hikers_screenshot.png" alt="Screenshot of Byte Hikers application">
-                </a>
-                <figcaption>A hiking app that was built with a classmate that tracks users' outdoor activities</figcaption>
-            </figure>
+<div id="skills" class="observed-section">
+    <h3>Skills</h3>
+    <ul>
+        <li><img src="img/python_logo.png" alt="Python logo" height="35px">Python</li>
+        <li><img src="img/matlab_logo.png" alt="MATLAB logo" height="35px">MATLAB</li>
+        <li><img src="img/sql_logo.png" alt="SQL logo" height="35px">SQL</li>
+        <li><img src="img/cpp_logo.png" alt="C++ logo" height="35px">C/C++</li>
+        <li><img src="img/js_logo.png" alt="JavaScript logo" height="35px">JavaScript</li>
+        <li><img src="img/node_logo.png" alt="Node JS logo" height="35px">Node JS</li>
+        <li><img src="img/express_logo.png" alt="Express logo" height="35px">Express</li>
+        <li><img src="img/handlebars_logo.png" alt="Handlebars logo" height="35px">Handlebars</li>
+        <li><img src="img/css_logo.png" alt="CSS logo" height="35px">CSS</li>
+        <li><img src="img/flask_logo.png" alt="Python Flask logo" height="35px">Python Flask</li>
+        <li><img src="img/gcloud_logo.png" alt="Google Cloud logo" height="35px">Google Cloud</li>
+        <li><img src="img/oauth_logo.png" alt="OAuth logo" height="35px">Oauth2.0</li>
+    </ul>
+</div>
 
-            <figure>
-                <a href="/projects?project=ocean">
-                    <img src="/img/oceanography_poster.jpg" alt="Burkely Pettijohn in front of his scientific poster">
-                </a>
-                <figcaption>Oceanographic research project that attempts to describe turbulence intensity using a novel approach</figcaption>
-            </figure>
-        </div>    
-    </div>
-
-<script>
-    function navToResume() {
-        document.location.href = "/resume";
-    };
-</script>
+<script src="js/scroll-spy.js" type="text/javascript"></script>
