--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -20,8 +20,8 @@ html, body {
 
 .grid-layout {
     display: grid;
-    grid-template-rows: 0.3fr 0.7fr 100px 55px;     /* header + nav + contact + Footer */
-    grid-template-columns: 25% 1fr;  /* Sidebar + main */
+    grid-template-rows: 0.3fr 0.7fr 100px 50px;     /* header + nav + contact + Footer */
+    grid-template-columns: 30% 1fr;  /* Sidebar + main */
     height: 99vh;
 }
 
@@ -29,7 +29,7 @@ main {
     grid-row: 1 / 5;
     grid-column: 2 / 3;
     overflow-y: auto;
-    padding: 10%;
+    padding: 10% 15% 10% 5%;
     background-color: var(--background);
 }
 
@@ -38,7 +38,7 @@ header {
     grid-column: 1 / 2;
     background-color: var(--primary);
     color: var(--light);
-    padding: 1em;
+    padding: 1em 1em 1em 1em;
     overflow-y: clip;
     display: block;
 }
@@ -73,7 +73,7 @@ footer {
 .contact_logo {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    text-align: center;
     align-items: center;
 }
 
@@ -88,11 +88,22 @@ h1 {
     font-size: 40px;
 }
 
-h2, h3 {
+h2 {
+    font-family: 'Roboto', serif;
+    font-size: 30px;
+}
+
+h3 {
     margin-top: 0;
-    margin-bottom: 20px;
+    font-size: 30px;
     font-family: 'Roboto', serif;
     font-style: italic;
+}
+
+h4 {
+    font-size: 20px;
+    font-family: 'Roboto', serif;
+    font-style: normal;
 }
 
 main div {
@@ -119,6 +130,8 @@ main::-webkit-scrollbar-thumb {
 }
 
 #contact a {
+    text-decoration: none;
+    color: inherit;
     padding: 5px;
     margin: 5px;
 }
@@ -140,20 +153,20 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    width: 120px;
+    width: 150px;
     margin: 10px;
     padding: 0;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: var(--text);
+    color: var(--light);
     font-weight: 600;
-    padding: 12px 18px;
+    padding: 5px;
     display: block;
     border-radius: 6px;
     transition: all 0.3s ease;
-    background-color: var(--secondary);
+    background-color: var(--primary);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.185);
 }
 
@@ -170,7 +183,8 @@ nav ul li a {
 
 /* Find out how to do this */
 .nav-link.active {
-    background-color: var(--primary);
+    background-color: var(--accent);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.514);
     color: var(--light);
     transform: scale(1.05);
 }
@@ -190,13 +204,14 @@ th, td {
 
 #skills ul {
     list-style: none;
-    column-count: 4;
+    column-count: 3;
 }
 
 #skills li {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    padding: 15px;
     margin-bottom: 15px;
 }
 
@@ -206,8 +221,8 @@ th, td {
 }
 
 #project_list {
-    border-collapse: collapse; /* Ensures there are no double borders */
-    border: none; /* Removes any border around the table */
+    border-collapse: collapse;
+    border: none;
     width: 100%;
     table-layout: fixed;
 }
@@ -218,6 +233,7 @@ th, td {
 
 #project_list td.project_image {
     width: 70%;
+    padding: 55px;
 }
 
 #project_list td.project_image img {
@@ -244,6 +260,42 @@ th, td {
     list-style: none;
     display: flex;
     justify-content: space-around;
+}
+
+#job_list {
+    border-collapse: collapse;
+    border: none;
+    width: 100%;
+    table-layout: fixed;
+}
+
+#job_list td {
+    border: none;
+    vertical-align: top;
+    padding: 10px;
+}
+
+#job_list .job_dates {
+    width: 100%;
+    height: 100%;
+}
+
+#job_list td:first-child {
+    width: 20%;
+}
+
+#job_list .job_details {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    height: 100%;
+    justify-content: flex-start;
+}
+
+#display_project {
+    display: flex;
+    flex-direction: column;
 }
 
 .iframes {
