--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -22,7 +22,7 @@ html, body {
     display: grid;
     grid-template-rows: 0.3fr 0.7fr 100px 50px;     /* header + nav + contact + Footer */
     grid-template-columns: 30% 1fr;  /* Sidebar + main */
-    height: 99vh;
+    height: 98.5vh;
 }
 
 main {
@@ -204,7 +204,9 @@ th, td {
 
 #skills ul {
     list-style: none;
-    column-count: 3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 #skills li {
@@ -213,6 +215,18 @@ th, td {
     gap: 0.5rem;
     padding: 15px;
     margin-bottom: 15px;
+}
+
+#skills_key {
+    width: 1fr;
+    text-align: center;
+    padding-top: 50px;
+}
+
+#skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #show-project {
@@ -327,6 +341,11 @@ figure {
 
 iframe {
     align-self: center;
+}
+
+h4 {
+    font-style: italic;
+    font-size: 20px;
 }
 
 /*
